--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "wod-tracker",
   "private": true,
   "dependencies": {
+    "@nathanvda/cocoon": "^1.2.14",
     "@rails/activestorage": "^6.0.3",
     "@rails/ujs": "^6.0.3",
     "@rails/webpacker": "^5.2.1",
     "bootstrap": "^4.5.2",
-    "cocoon": "github:nathanvda/cocoon",
     "expose-loader": "^1.0.0",
     "jquery": "^3.5.1",
     "local-time": "^2.1.0",
