add more inotify listeners

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Install PostgreSQL client
         run: sudo apt-get -yqq install libpq-dev
 
+      # https://github.com/guard/listen/blob/master/README.md#the-technical-details
+      - name: Adjust inotify listeners for Listen
+        run: |
+          sudo sysctl fs.inotify.max_user_watches=524288
+          sudo sysctl -p
+
       # Install Ruby
       - uses: ruby/setup-ruby@v1
         with:
