Upgrade to ruby 3 (#408)
* Upgrade to ruby 3

* add more inotify listeners

* update hound rubocop

* update cc rubocop

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,16 @@ jobs:
       - name: Install PostgreSQL client
         run: sudo apt-get -yqq install libpq-dev
 
+      # https://github.com/guard/listen/blob/master/README.md#the-technical-details
+      - name: Adjust inotify listeners for Listen
+        run: |
+          sudo sysctl fs.inotify.max_user_watches=524288
+          sudo sysctl -p
+
       # Install Ruby
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7.2
+          ruby-version: 3.0.0
 
       # Install NodeJs
       - uses: actions/setup-node@v1
