--- a/app.json
+++ b/app.json
@@ -41,8 +41,11 @@
   "addons": [
     "heroku-postgresql"
   ],
-  "stack": "heroku-18",
+  "stack": "heroku-20",
   "buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    },
     {
       "url": "heroku/ruby"
     }
