--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "wod-tracker",
+  "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build:css": "sass ./app/assets/stylesheets/application.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+  },
   "dependencies": {
-    "@activeadmin/activeadmin": "^2.12.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@hotwired/stimulus": "^3.0.1",
+    "@hotwired/turbo-rails": "^7.1.0",
     "@nathanvda/cocoon": "^1.2.14",
     "@popperjs/core": "^2.11.5",
-    "@rails/activestorage": "^6.1.5",
+    "@rails/activestorage": "^7.0.2",
     "@rails/ujs": "^6.1.5",
-    "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
+    "cocoon-js-vanilla": "^1.2.0",
+    "esbuild": "^0.14.8",
     "jquery": "^3.6.0",
     "local-time": "^2.1.0",
-    "popper.js": "^1.16.1",
-    "tom-select": "^2.0.1",
-    "turbolinks": "^5.2.0"
+    "sass": "^1.45.1",
+    "tom-select": "^2.0.1"
   },
-  "devDependencies": {
-    "webpack-dev-server": "^4.9.0"
-  }
+  "devDependencies": {}
 }
