Update heroku to 22 stack

--- a/app.json
+++ b/app.json
@@ -35,13 +35,13 @@
   "formation": {
     "web": {
       "quantity": 1,
-      "size": "free"
+      "size": "eco"
     }
   },
   "addons": [
     "heroku-postgresql"
   ],
-  "stack": "heroku-20",
+  "stack": "heroku-22",
   "buildpacks": [
     {
       "url": "heroku/nodejs"
