--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@nathanvda/cocoon": "^1.2.14",
     "@popperjs/core": "^2.11.8",
+    "@rails/actiontext": "^7.1.0",
     "@rails/activestorage": "^7.1.0",
     "@rails/ujs": "^7.1.0",
     "bootstrap": "^5.3.2",
@@ -20,7 +21,8 @@
     "jquery": "^3.7.1",
     "local-time": "^2.1.0",
     "sass": "^1.69.2",
-    "tom-select": "^2.1.0"
+    "tom-select": "^2.1.0",
+    "trix": "^2.0.7"
   },
   "devDependencies": {}
 }
