--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,3 +67,11 @@ jobs:
         with:
           coverageCommand: bundle exec rails test:all
           debug: true
+
+      # - name: Run RuboCop
+      #   run: bundle exec rubocop --parallel
+      - uses: reviewdog/action-rubocop@v2
+        with:
+          reporter: github-pr-check 
+          skip_install: true
+          use_bundler: true
