--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,8 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  automerge: true
+  merge-strategy: squash
   reviewers:
   - Yanchek99
   labels:
@@ -15,6 +17,10 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  automerge: true
+  merge-strategy: squash
+  reviewers:
+  - Yanchek99
   labels:
   - javascript
   - dependencies
